--- a/nodecg-corner-select.html
+++ b/nodecg-corner-select.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-button/paper-button.html">
-<link rel="import" href="../paper-styles/paper-styles-classes.html">
+<link rel="import" href="../paper-styles/paper-styles.html">
 <link rel="import" href="../iron-selector/iron-selector.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
 
@@ -81,7 +81,7 @@
                 }
             });
 
-            this.replicant.on('change', this.replicantChanged);
+            this.replicant.on('change', this.replicantChanged.bind(this));
         },
 
         /*
